--- a/Game/index.html
+++ b/Game/index.html
@@ -3,16 +3,18 @@
 <head>
 	<title>Homepage</title>
 </head>
-<body style="background-color: black">
+<body style="background-color: black"> <!--sets background to black-->
 
-   <center><h2 style="color: white; font-size: 40px">Welcome to Shoot</h2></center>
+   <center><h2 style="color: white; font-size: 40px">Welcome to Shoot</h2></center> <!--sets color to white and centers text-->
 
-   <br><br><br><br><br><br>
+   <br><br><br><br><br><br> <!--line breaks-->
 
-   <center><p style="color: white; font-size: 30px">Pick an enviornment:</p></center>
+   <center><p style="color: white; font-size: 30px">Pick an enviornment:</p></center> <!--sets color to white and centers text-->
 
-   <a href="ChooseWeapon.html"><img src="Images/environment1.png" width="450" height="300" style="float: left; margin-left: 150px"></a>
+   <!--button links to Choose Weapon page and sets size of image-->
+   <a href="ChooseWeapon.html"><img src="Images/environment1.png" width="450" height="300" style="float: left; margin-left: 150px"></a> 
 
+   <!--button links to Choose Weapon2 page and sets size of image-->
    <a href="ChooseWeapon2.html"><img src="Images/env2Background.jpg" width="450" height="300" style="float: right; margin-right: 150px"></a>
 
 </body>
