--- a/Game/ChooseWeapon2.html
+++ b/Game/ChooseWeapon2.html
@@ -5,15 +5,16 @@
 </head>
 <body style="background-color: black">
 
+    <!--button links to index.html-->
 	<a href="index.html"><button type="button"> <-- Main Page</button></a>
 
-   <center><h2 style="color: white; font-size: 40px">Choose Your Weapon</h2></center>
+   <center><h2 style="color: white; font-size: 40px">Choose Your Weapon</h2></center> <!--makes color white and centers it-->
 
-   <br><br><br><br><br><br><br><br><br>
+   <br><br><br><br><br><br><br><br><br> <!--line breaks-->
 
-   <a href="environment2.html"><img src="Images/choosingGun.png" width="500" height="300" style="float: left;"></a>
+   <a href="environment2.html"><img src="Images/choosingGun.png" width="500" height="300" style="float: left;"></a> <!--links image to enviornment2 page-->
 
-   <a href="environment2Pt2.html"><img src="Images/choosingRifle.png" width="700" height="250" style="float: right;"></a>
+   <a href="environment2Pt2.html"><img src="Images/choosingRifle.png" width="700" height="250" style="float: right;"></a> <!--links image to enviornment2Pt2 page-->
 
 </body>
 </html>
